MT: Added svg page

--- a/Mentoring.OfficeBuilder.API/Mentoring.OfficeBuilder.API.csproj
+++ b/Mentoring.OfficeBuilder.API/Mentoring.OfficeBuilder.API.csproj
@@ -8,11 +8,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Mentoring.OfficeBuilder.DAL\Mentoring.OfficeBuilder.DAL.csproj" />
     <ProjectReference Include="..\Mentoring.OfficeBuilder.Models\Mentoring.OfficeBuilder.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Content\" />
   </ItemGroup>
 
 </Project>
