--- a/Mentoring.OfficeBuilder.API/appsettings.json
+++ b/Mentoring.OfficeBuilder.API/appsettings.json
@@ -7,6 +7,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=OfficeBuilderDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=OfficeBuilderDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
